# deterministic-parsing

./: deterministic-parsing.cabal
app/: Main.hs
src/: Parsing.hs
src/Data/: Predicate.hs  Relation.hs  Table.hs
src/Data/Map/: Symbolic.hs
src/Data/Set/: Hybrid.hs  Symbolic.hs
src/Example/: Expr.hs
src/Text/Deterministic/: Parser.hs  Token.hs
test/: DocTest.hs
test/fixtures/: expr1.txt
