name:                deterministic-parsing
version:             0.0.0.0
synopsis:            Deterministic parsing.
homepage:            https://github.com/robrix/deterministic-parsing
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Set.Symbolic
                     , Example.Expr
                     , Text.Deterministic.Parser
  build-depends:       base >=4.10 && <4.11
                     , containers
                     , parsers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

executable deterministic-parsing
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , deterministic-parsing
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -A4m -n2m" -static -j -O
