name:                deterministic-parsing
version:             0.0.0.0
synopsis:            Deterministic parsing.
homepage:            https://github.com/robrix/deterministic-parsing
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Predicate
                     , Data.Relation
                     , Data.Table
                     , Example.Expr
                     , Text.Deterministic.Parser
                     , Text.Deterministic.Token
  build-depends:       base >=4.10 && <4.11
                     , containers
                     , parsers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  build-depends:       base >= 4.10 && <4.11
                     , deterministic-parsing
                     , doctest
                     , QuickCheck
                     , unix
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing
